force-app/main/default/objects/User_Movie_Interaction__c/User_Movie_Interaction__c.object-meta.xml
<CustomObject>
    <label>User Movie Interaction</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Movie Interactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>