force-app/main/default/objects/User_Movie_Interaction__c/fields/Interaction_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Interaction_DateTime__c</fullName>
    <label>Interaction Date/Time</label>
    <type>DateTime</type>
</CustomField>