force-app/main/default/objects/User_Movie_Interaction__c/fields/Interaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Source__c</fullName>
    <label>Interaction Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Swipe_Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>