force-app/main/default/objects/User_Movie_Interaction__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thumbs_Up</fullName>
            </value>
            <value>
                <fullName>Thumbs_Down</fullName>
            </value>
            <value>
                <fullName>Swipe_Right</fullName>
            </value>
            <value>
                <fullName>Swipe_Left</fullName>
            </value>
            <value>
                <fullName>Watchlisted</fullName>
            </value>
            <value>
                <fullName>Watched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>