force-app/main/default/objects/User_Movie_Interaction__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>User Movie Interactions</relationshipLabel>
    <relationshipName>User_Movie_Interactions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>