force-app/main/default/objects/User_Movie_Interaction__c/fields/Swipe_Session__c.field-meta.xml
<CustomField>
    <fullName>Swipe_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swipe Session</label>
    <referenceTo>Swipe_Session__c</referenceTo>
    <relationshipLabel>User Movie Interactions</relationshipLabel>
    <relationshipName>User_Movie_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>