force-app/main/default/objects/User_Movie_Interaction__c/fields/Swipe_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Swipe_Session_Id__c</fullName>
    <label>Swipe Session ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>