force-app/main/default/objects/User_Movie_Interaction__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Movie Interactions</relationshipLabel>
    <relationshipName>User_Movie_Interactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>